<resources>
    <string name="app_name">Covid-19 Guide</string>
    <string name="loginT">Please Login Login to Continue</string>
    <string name="logintitleB">Guide To Covid-19</string>
    <string name="mainT">Covid_19</string>
    <string name="imageDescrp">A pic of Covid-19 Vaccine</string>
    <string name="tittletxt">Covid-19</string>
    <string name="titleDescrp">The Ultimate Guide</string>
    <string name="title_intro">Introduction</string>
    <string name="Dr_title">Message from the Regional Director of WHO Africa. (Dr. Luis Gomes Sambo-
        WHO Regional Office for Africa)</string>
    <string name="Dr_msg"> “Every year millions of Africans are dying needlessly of
        diseases that are preventable and treatable. The Health of the People: The African Regional
        Health Report provides vital reading
        for those who want to understand why and what can be done about it”</string>
    <string name="disclaimerT">Disclaimer</string>
    <string name="disclaimer">“This App is designed to create awareness among the sub-Saharan Africa. 
        On the causes, symptoms, diagnosis, treatment, vaccines and prevention methods of COvid-19
        and should not be used as a substitute to medical advice by medical professionals”</string>
    <string name="bigin_title">How did COVID-19 begin?</string>
    <string name="bigin_body">In December 2019, a new respiratory illness began to spread throughout Wuhan,
        China, a city of 11 million people in Hubei province. The virus, known as COVID-19, quickly
        infected tens of thousands of people over the ensuing weeks. China imposed major restrictions
        on travel and work, and by the end of February, cases of COVID-19 had slowed inside the country
        while spiking in other countries including South Korea, Italy, and Iran.
        In March, the World Health Organization recognized the breakout as a global pandemic — the first since 2009.
    </string>
    <string name="whatT">What is a novel coronavirus?</string>
    <string name="whatB">A novel coronavirus is a new kind of coronavirus that has not been
        previously identified. Coronaviruses usually cause upper-respiratory tract illnesses like
        the common cold, though some can grow serious.
        Most people contract some sort of coronavirus during their lives. Human coronaviruses were first
        discovered in the 1960s, and seven of them can infect people. SARS was a coronavirus
        that killed 774 people in 2002–03, while MERS is a coronavirus that has killed 861 people since 2012.

    </string>
    <string name="lastT">When was the last time we had a global pandemic?</string>
    <string name="lastB">COVID-19 is the first global pandemic since the 2009 H1N1 “swine flu”
        outbreak. The 2014 Ebola outbreak in West Africa and the 2016 Zika virus outbreak were
        both categorized as international emergencies.
        H1N1 was an influenza outbreak that infected about 60 million people in the United States from
        April 2009 – April 2010. It’s estimated that about 11–21% of the global population contracted
        the virus, and somewhere between 151,000–575,000 people died.
</string>
    <string name="sourcesT">What are some reliable sources of information to follow?</string>
    <string name="sourcesB">For up-to-date numbers about COVID-19 cases around the world, see the
        Johns Hopkins University Coronavirus Resource Center.
        For information about COVID-19 cases in the U.S., visit the CDC.
        The New York Times has made all its coverage about the coronavirus outbreak free and available
        at their website
    </string>
    <string name="sympmainTitle">Signs and Symptoms</string>
    <string name="title1T">What you need to know</string>
    <string name="title1B">Anyone can have mild to severe symptoms.
    Older adults and people who have severe underlying medical conditions 
        like heart or lung disease or diabetes seem to be at higher risk 
        for developing more serious complications from COVID-19 illness.
</string>
    <string name="symptomsT">Watch for symptoms</string>
    <string name="symptomsB">People with COVID-19 have had a wide range of symptoms reported –
        ranging from mild symptoms to severe illness. Symptoms may appear 2-14 days after exposure
        to the virus. People with these symptoms may have COVID-19:</string>
    <string name="sympsBB1">Fever or chills</string>
    <string name="sympsBB2">      Cough  </string>
    <string name="sympsBB3">Shortness of breath or difficulty breathing </string>
    <string name="sympsBB4">   Fatigue </string>
    <string name="sympsBB5">    Muscle or body aches </string>
    <string name="sympsBB6">     Headache </string>
    <string name="sympsBB7">     New loss of taste or smell</string>
    <string name="sympsBB8">       Sore throat</string>
    <string name="sympsBB9">     Congestion or runny nose   </string>
    <string name="sympsBB10">      Nausea or vomiting  </string>
    <string name="sympsBB11">      Diarrhea</string>
    <string name="emergencyT">When to seek emergency medical attention</string>
    <string name="emergencyB">Trouble breathing</string>
    <string name="emergencyB2">Persistent pain or pressure in the chest</string>
    <string name="emergencyB3">New confusion</string>
    <string name="emergencyB4"> Inability to wake or stay awake</string>
    <string name="emergencyB5"> Pale, gray, or blue-colored skin, lips, or nail beds, depending on skin tone</string>
    <string name="emergencyB6"> NOTE: This list is not all possible symptoms. Please call your medical provider
        for any other symptoms that are severe or concerning to you.</string>
    <string name="vacmaintitle">Vaccines/Inoculation</string>
    <string name="vactitleT">Is there a Vaccine for Covid-19?</string>
    <string name="vacctitleB">Yes there are now several vaccines that are in use. The first mass
        vaccination programme started in early December 2020 and as of and as of 15 February 2021,
        175.3 million vaccine doses have been administered. At least 7 different vaccines
        (3 platforms) have been administered.</string>
    <string name="vacchowquickT">How quickly could COVID-19 vaccines stop the pandemic?</string>
    <string name="vacchowquickB">The impact of COVID-19 vaccines on the pandemic will depend on
        several factors. These include the effectiveness of the vaccines; how quickly they are
        approved, manufactured, and delivered; the possible development of other variants and
        how many people get vaccinated
        Whilst trials have shown several COVID-19 vaccines to have high levels of efficacy,
        like all other vaccines, COVID-19 vaccines will not be 100% effective. WHO is working
        to help ensure that approved vaccines are as effective as possible, so they can have the
        greatest impact on the pandemic.</string>
    <string name="vaccTypesT">What types of COVID-19 vaccines are being developed? How would they work?</string>
    <string name="vaccTypesB">Scientists around the world are developing many potential 
        vaccines for COVID-19. These vaccines are all designed to teach the body’s immune 
        system to safely recognize and block the virus that causes COVID-19.
        Several different types of potential vaccines for COVID-19 are in development, including:
        Inactivated or weakened virus vaccines, which use a form of the virus that has been 
        inactivated or weakened so it doesn’t cause disease, but still generates an immune response.
        Protein-based vaccines, which use harmless fragments of proteins or protein shells that mimic 
        the COVID-19 virus to safely generate an immune response.
        Viral vector vaccines, which use a safe virus that cannot cause disease but serves as a 
        platform to produce coronavirus proteins to generate an immune response.
        RNA and DNA vaccines, a cutting-edge approach that uses genetically engineered RNA or 
        DNA to generate a protein that itself safely prompts an immune response.</string>
    <string name="vaccBenefitsT">What are the benefits of getting vaccinated?</string>
    <string name="vaccBenefitsB">The COVID-19 vaccines produce protection against the disease,
        as a result of developing an immune response to the SARS-Cov-2 virus.  Developing immunity
        through vaccination means there is a reduced risk of developing the  illness and its
        consequences. This immunity helps you fight the virus if exposed. Getting vaccinated may
        also protect people around you, because if you are protected from getting infected and
        from disease, you are less likely to infect someone else. This is particularly important
        to protect people at increased risk for severe illness from COVID-19, such as healthcare
        providers, older or elderly adults, and people with other medical conditions.</string>
    <string name="vaccSafetyT">How will we know if COVID-19 vaccines are safe?</string>
    <string name="testmainT">Testing</string>
    <string name="tstT">COVID-19 Testing</string>
    <string name="tstB">Two kinds of tests are available for COVID-19:</string>
    <string name="tstB1">Viral tests</string>
    <string name="tstB2">Antibody tests.</string>
    <string name="tstB3"> A viral test tells you if you have a current infection.An antibody test might tell you if
        you had a past infection.</string>
    <string name="who2testT">Who should get tested</string>
    <string name="who2testB">People who have symptoms of COVID-19.</string>
    <string name="who2testB1">People who have had close contact (within 6 feet for a total of 15 minutes
        or more) with someone with confirmed COVID-19.</string>
    <string name="who2testB2">People who have taken part in activities that put them at higher risk for
        COVID-19 because they cannot socially distance as needed, such as travel, attending
        large social or mass gatherings, or being in crowded indoor settings.</string>
    <string name="who2testB3">People who have been asked or referred to get testing by their healthcare provider,
        localexternal icon or state ​health department.</string>
    <string name="note">Not everyone needs to be tested. If you do get tested, you should
        self-quarantine/isolate at home pending test results and follow the advice of your 
        health care provider or a public health professional.</string>
    <string name="resultsT">Results</string>
    <string name="resultsB">If you test positive, know what protective steps to take to prevent
        others from getting sick.</string>
    <string name="results2B">If you test negative, you probably were not infected at
        the time your sample was collected. The test result only means that you did not have
        COVID-19 at the time of testing. Continue to take steps to protect yourself.</string>
</resources>