<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/vaccinebg"
    tools:context=".Symptoms">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="218dp"
        android:layout_height="90dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.575"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.84"
        app:srcCompat="@drawable/cvd_1" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sympmainTitle"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.044" />

    <ScrollView
        android:id="@+id/scrollView4"
        android:layout_width="407dp"
        android:layout_height="557dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.988">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title1T"

                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/curved_rex"
                android:paddingStart="20dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="15dp"
                android:text="@string/title1B"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/symptomsT"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/curved_rex"
                android:paddingStart="20dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="15dp"
                android:text="@string/symptomsB"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/curved_rex"
                android:paddingStart="20dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="15dp"
                android:text="@string/sympsBB1"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/curved_rex"
                android:paddingStart="20dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="15dp"
                android:text="@string/sympsBB2"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/curved_rex"
                android:paddingStart="20dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="15dp"
                android:text="@string/sympsBB3"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/curved_rex"
                android:paddingStart="20dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="15dp"
                android:text="@string/sympsBB4"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/curved_rex"
                android:paddingStart="20dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="15dp"
                android:text="@string/sympsBB5"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/curved_rex"
                android:paddingStart="20dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="15dp"
                android:text="@string/sympsBB6"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/curved_rex"
                android:paddingStart="20dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="15dp"
                android:text="@string/sympsBB7"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/curved_rex"
                android:paddingStart="20dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="15dp"
                android:text="@string/sympsBB8"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/curved_rex"
                android:paddingStart="20dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="15dp"
                android:text="@string/sympsBB9"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/curved_rex"
                android:paddingStart="20dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="15dp"
                android:text="@string/sympsBB10"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/curved_rex"
                android:paddingStart="20dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="15dp"
                android:text="@string/sympsBB11"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/curved_rex"
                android:paddingStart="20dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="15dp"
                android:text="@string/emergencyT"
                android:textColor="#ff0000"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/curved_rex"
                android:paddingStart="20dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="15dp"
                android:text="@string/emergencyB"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/curved_rex"
                android:paddingStart="20dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="15dp"
                android:text="@string/emergencyB2"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/curved_rex"
                android:paddingStart="20dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="15dp"
                android:text="@string/emergencyB3"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/curved_rex"
                android:paddingStart="20dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="15dp"
                android:text="@string/emergencyB4"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/curved_rex"
                android:paddingStart="20dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="15dp"
                android:text="@string/emergencyB5"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:layout_width="382dp"
                android:layout_height="4dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/curved_rex"
                android:paddingStart="20dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="15dp"
                android:text="@string/emergencyB6"
                android:textColor="@color/white"
                android:textSize="15sp" />


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>