<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/vaccinebg"
    tools:context=".Vaccine">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="365dp"
        android:layout_height="129dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        app:srcCompat="@drawable/viral_test" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/testmainT"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.153" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="392dp"
        android:layout_height="501dp"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.891">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/curved_rex"
                android:paddingStart="20dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="15dp"
                android:text="@string/tstT"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/curved_rex"
                android:paddingStart="20dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="15dp"
                android:text="@string/tstB"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/curved_rex"
                android:paddingStart="20dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="15dp"
                android:text="@string/tstB1"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/curved_rex"
                android:paddingStart="20dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="15dp"
                android:text="@string/tstB2"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/curved_rex"
                android:paddingStart="20dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="15dp"
                android:text="@string/tstB3"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/curved_rex"
                android:paddingStart="20dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="15dp"
                android:text="@string/who2testT"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/curved_rex"
                android:paddingStart="20dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="15dp"
                android:text="@string/who2testB"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/curved_rex"
                android:paddingStart="20dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="15dp"
                android:text="@string/who2testB1"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/curved_rex"
                android:paddingStart="20dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="15dp"
                android:text="@string/who2testB2"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/curved_rex"
                android:paddingStart="20dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="15dp"
                android:text="@string/who2testB3"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/curved_rex"
                android:paddingStart="20dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="15dp"
                android:text="@string/note"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/curved_rex"
                android:paddingStart="20dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="15dp"
                android:text="@string/resultsT"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/curved_rex"
                android:paddingStart="20dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="15dp"
                android:text="@string/resultsB"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/curved_rex"
                android:paddingStart="20dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="15dp"
                android:text="@string/results2B"
                android:textColor="@color/white"
                android:textSize="15sp" />


        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>